# EfficientNet-Pytorch-TensorRT

./: README.md  eff-pytorch.yaml
Data/: dataset_split.py
Eff-PyTorch/: main_img.py  main_matrix.py  main_matrix_MS.py  signal_matrix.py  signal_matrix_MS.py
Eff-TRT-IMG/: CMakeLists.txt  gen_wts.py
EfficientNet-PyTorch/: main.py  main_matrix.py  matrix_dataset.py
EfficientNet-PyTorch/data/: dataset_split.py
EfficientNet-PyTorch/matrix_data_train/: main_matrix_confusion.py  main_matrix_vote.py
EfficientNet-TensorRT/: efficientnet.cpp  gen_wts.py
Serve/Client/: rader_multi.py  rader_single.py
Serve/Client/httplib_demo/: server.cpp
Serve/Server-TRT-IMG/: CMakeLists.txt  efficientnet.cpp  gen_wts.py
Serve/Server-TRT-MATRIX/: efficientnet.cpp  gen_wts.py
Time2Freq/: 1_sign0_f048.7303_A1.0507.txt  time2freq_img.py  time2freq_matrix.py
